Update Dockerfile to decrease the size of image